tests/expectations/parser/statement/async_fail.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'expression', found 'async'
    --> test:1:1
     |
   1 | async finalize(foo);
     | ^^^^^"""]
